--- a/wireframe.html
+++ b/wireframe.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wireframe 2 HTML</title>
+    <title>BYUI</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <div class="logo-box">
-            <img src="Screen Shot 2023-09-16 at 9.27.03 AM.png/75/75 " alt="logo">
-        </div>
         <nav>
-            <a href="index.html"></a>
-            <a href="#">Page 1</a>
-            <a href="#">Page 2</a>
-            <a href="#">Page 3</a>
-         </nav>
-     </header>
-     <main>
-        <div id="banner-box">
-            <section class="banner">
-
-            </section>
-        </div>
+            <a id="active" href="byui.html">Home</a>
+            <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
+            <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Brigham Young University Idaho</h1>
+        <img src="https://www.byui.edu/images/service-sites/map-banner.jpg">
+        <p>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty, and employees share a commitment to live the gospel.</p>
     </main>
     <footer>
-
-
+        <p>Aaron Uwem Edem 2023 &copy</p>
     </footer>
 </body>
 </html>
