--- a/wwr/asquared/aboutme.html
+++ b/wwr/asquared/aboutme.html
@@ -36,7 +36,7 @@
         
     </main>
     <footer>
-        <p>Asquared &copy; 2023 - Aaron Edem</p>
+        <p>Asquared Properties &copy; 2023 - Aaron Edem</p>
         <p><a href="site-plan.html">Site Plan</a></p>
         <p><a href="aboutme.html">about me</a></p>
         <div class="social">
