--- a/wwr/asquared/site-plan.html
+++ b/wwr/asquared/site-plan.html
@@ -193,19 +193,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="https://lh3.googleusercontent.com/pw/ADCreHe6keJOd0UtmxLDpvDPXVsyroUUwsJfwb4UhD3wbgmd2sAmHQThZuog_mBcpOJecLpSGbhLfd_hqzL5Zga4ZTfaG-T80xBBYu2gPZUNQ_JvtPLwMNc7XkeTVyWzb_af18xa50cdS2pQY7tINASC6E4EMeDNmtJV5uQvgT1txsbI52uCOmjqO2_sfd0jrbsrXHR48WhJMkUni7D8Q6TkytuJtWjYGX2AAUChpDaIPe6dkPpDqfivn8oGNv07CTjAjbvUrBzTtL7C0odYa80bBSuITPZX6q-fnSmiYoX3EePELs3EqAz9IrlA7Vz-e9aDWZEXn_F_BE_ZpDfKjzP0RXBDb2r_75Ob6ErCR4gIyhe3m50tRv-L1OCvVQB_Ud6-_UAxRvJL3NM3wWbfwl-yH5CPCXyudsIBTARIo1svRB4PMElnBI0MtV4m6ixCLQz6Jftc7glxcN_j1AMh4TyRAwq18zynMuEpCRP7fEaGLtd4L9OyIHaWDcpEE60IIK-xGdlm_yQiDptOgVxGqby1trYpaKFLSLelIEhiyS4_BQItJwYS9YUsXsud0D_lfQHIlrvIkd0pcA1-d5wHqIX1swRRQGIAbN-pXUUL_9y8iOcOQwjVx2N4ZHQsXHw6MyOXxu0SoLrG2emGbIghWbegVrW3YI2m7xS36v1OCtylvf0LnJARKuNP1HkoGr9UFajaI6g5nJivtyOjjQyeLFkWjc9mZISLbC3xjLGHx-p8xVtwGM0lHN2SNojPjqIuNeEkq11YwqNFmW36rUc8Nd2cJeF2KLGYBtq2BumKhLtdhaCjbRtpbJUf7fAkIIW8YBcJ-cl5KX_ccu-TzvrOwSmhJuPQnrp4pp5CPpORaUziqRKdmjEyY6Pg-qn7uWyQzkR7z9BwGyEMnZur4QyIaOAOuRX3jsI=w553-h714-s-no?authuser=0" alt="home page wireframe">
+      <img src="./images/homepage.png" alt="home page wireframe">
 
       <h3>Page 2</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="https://lh3.googleusercontent.com/pw/ADCreHeHKd6Y7qbYjBCBG4SDU3MzXnRG4iL8H7MkYqGPwnLvXGyltP_bkq4L_U9l4cMy0SaX3C8JsiLeMZbuNHYbxvG36ZGhiXrX1lmqsqoVtflJAOI27vg2h8GoXFxpo3WoW5KGi8agRaN5Mi8MHydYqr_BVMginTVd2sTQvFQpjB6D9gjRO_CTOaYp8qRlGf4UljKIRVRdixiFzoUKy0rPuqVt0MBoIRM0HLqw_zzGcaZPdaQ24UHsNObhNAXce7R_ZEC_AA2ngl6DZtWX1odevwPEaKZ8sG_S2nTVOwNcg4PVSt0L0g7olA_8_VkTJLE00PJvUvIpvapgdsDJe1yyPBX7bibRpRSkyVfEz7Q842zxppbhQv3oTHISMOzNWVuP-WiILSGGDX0d-RtFkjskOxeljapF7pVmjVlVQd-4K85MnIivZMc76-J95z1nPHHmWaW8-uKqgyID-l50KEw9Ertdpvaw-zRbT0c74zlqOtoPxo0DNsN0SGkUOZUAWH6UpKFQQRekfcpoAu4tsKGuRn8C4ML4LgUpsWRzMsR1C27sdv7BCzyDCUHuLkH8lL2SYN1rezUU0mqLSMhNKgX7Vs0Fed17pDQFWs8sikR6fSAw4am4vUl-ujPtB10VAijA2xrd4K31nWGvXIjvF_m3H6K8QLoE8szHSwna4MBstOmLaSlY5347lpDn6T0R7pKI0V2aorsGrxmbUMsD1OzWZzuRku4Rm8tQ-evYZ1KZ_K22Ge-cgLAEGMdldQeLxbMYKtO0FwKwBkNvkFqXhQ4J-e4JYolMHWFmN60qQCMw2vGwjzaMr6H9qIhLmrCa0MA5C2Pt5hBVG5CossVLJo8mxXgb6fGnFkA-t84xcdzLsSDnMjzjI9LZUx6zYjRNzBVTTeLykY31Vp25XX_kdoUqZgvlB-M=w492-h714-s-no?authuser=0" alt="page 2 wireframe">
+      <img src="./images/Page2.png" alt="page 2 wireframe">
 
       <h3>Page 3</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="https://lh3.googleusercontent.com/pw/ADCreHfgCClT8O-bZkL6XlV2V5hNHg43X2X6R8yj3Nxh5EXz7GV08223Q-vgCUTDZ7ECvKR9VuV2q0eLWPK_SXkqp5hD-42dOmWp5vaGEmQxiEq8jAFnNFr4SQCg4hoSNxEBB4DQjqsND3c7u4-Jl9OnYPnQP8uftZVCLj_IRBeyeJTBv2I4-eD3XUa8sbKHXYLQCIqN_2Vqpl3-6xh1Bkry6iVhhunb1V0S0JV9kfMM7izoEppX44jtVrOrf5gJfCBwptzMVzXo-P22UxW7nQXTgpO-fu8geAEQu5KvZHKGdv7kGIydU2yqOQuAhn29JY7iDhvj730s6xDy83NzkMgI4YIfJ4T-6ccgSBfUeU1tf0cdj4wgA_OGzBEaYzFCprZ07X-vyMKGJWbkOUH0A3uW0BWI1f_Y4msbGxR2FrOOiiDqUe3ynHY-XTxDOI4lFlnhNEkSyyaJPjccffzLVdAZY9s_IQ2DLtGWqCFOxG_FDyCDEjyEJt-VfUb5e_EJVtFbujTgnYtp_-rMUlwVDAd7eQGPywP6USe7ynMJvZAzMP79JgVsjhfPcJnXhWuBmweWpy1AnAfTx9E2x8lVqlq_7fgV2Ny_p3yg57rNAJn5zxeHVq3e4dovvyMVrOv4tQFo0Txx3usYfPZqyy_euersuRipTSeM94G7OCSf10IOFy_lQRXVrXJ57rU_fRM9eXQObLmlwFCJSIXnSOx1m_yYp5s7VedmvpX6Nq_05WcjtXX36OiwnETeq0X4-HDWRDDhtzhLu70km0w7QssCaB3COX9tgKJxjJVQUS6dmAItqcyUPPDt6jq2Kzoq0qtQHdhb7kxKHuqSemaxB0njFkv4qC6HjoggKrCYCCNj5CetER04mt6SvTtcmNHbkr7X0I986qHNum3WPNfOAnMqqLi_SWs0YeY=w486-h714-s-no?authuser=0" alt="page 3 wireframe">
+      <img src="./images/faqwireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
