--- a/wwr/asquared/site-plan.html
+++ b/wwr/asquared/site-plan.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
     
   <head>
     <meta charset="utf-8">
-    <title>Asquared Properties</title>
+    <title>asquared Properties</title>
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -100,7 +100,7 @@
       <nav><ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="faq.html">Real Estate in Nigeria</a></li>
+        <li><a href="FAQ.html">Real Estate in Nigeria</a></li>
       </ul></nav>
     
       <hr>
