--- a/wwr/asquared/contactus.html
+++ b/wwr/asquared/contactus.html
@@ -60,15 +60,16 @@
     <p>Asquared Properties &copy; 2023 - Aaron Edem</p>
     <p><a href="site-plan.html">Site Plan</a></p>
     <p><a href="aboutme.html">about me</a></p>
+    <p><a href="index.html">Homepage</a></p>
     <div class="social">
       <a href="https://facebook.com" target="_blank">
-        <img src="images/facebook.png" alt="fb icon">
+        <img src="facebook.png" alt="fb icon">
       </a>
       <a href="https://twitter.com" target="_blank">
-        <img src="images/twitter.png" alt="twitter icon">
+        <img src="twitter.png" alt="twitter icon">
       </a>
       <a href="https://instagram.com" target="_blank">
-        <img src="images/instagram.png" alt="instagram icon">
+        <img src="instagram.png" alt="instagram icon">
       </a>
     </div>
   </footer>
