--- a/wwr/asquared/index.html
+++ b/wwr/asquared/index.html
@@ -50,7 +50,7 @@
       </div>
       <nav>
         <a class="link1" href="index.html">home</a>
-        <a class="link2" href="faq.html">faqs</a>
+        <a class="link2" href="FAQ.html">faqs</a>
         <a class="link2" href="contactus.html">contact us</a>
         <a class="link3" href="aboutme.html">about me</a>
         <a class="link4" href="site-plan.html">site plan</a>
